# git-bayesx

./: CMakeLists.txt  NewReleases.txt  README.BayesX  README.CMake  README.md  bayesx.cbp  bayesx.cpp  bayesx.dsk  bayesx.tds  bayesx.workspace  bayesx_distributionen.txt  bayesxmails.csv  bayesxprompt.cpp  configure.bat  copy.bat  gcc.bat  main.cpp  make_sourcecode.bat  make_sourcecode.sh  makefile  makefile.orig  test.txt  test2.txt
adaptiv/: fullcond_adaptiv.cpp  fullcond_adaptiv.h
alex/: mixture.cpp  mixture.h
andrea/: IWLS_baseline.cpp  IWLS_baseline.h  baseline.cpp  baseline.h  cox.cpp  cox.h  multibaseline.cpp  multibaseline.h  multistate.cpp  multistate.h
bib/: Random.cpp  Random.h  admin.cpp  admin.h  adminparse.cpp  adminparse.h  adminparse_basic.cpp  adminparse_basic.h  adminparse_gnu.cpp  adminparse_gnu.h  adminparse_pointers.cpp  adminparse_pointers.h  arithm.h  bandmat.cpp  bandmat.h  bandmat_penalty.cpp  bandmat_penalty.h  bayesreg.cpp  bayesreg.h  bayesreg2.cpp  bayesreg2.h  bayesreg3.cpp  bayesreg3.h  bayesreg4.cpp  bayesreg4.h  clstring.cpp  clstring.h  command.cpp  command.h  data.cpp  data.h  dataobj.cpp  dataobj.h  describe_dataset.cpp  describe_dataset.h  describe_map.cpp  describe_map.h  envmatrix.cpp  envmatrix.h  envmatrix_penalty.cpp  (+54 more)
dag/: adjacency.cpp  adjacency.h  dagobject.cpp  dagobject.h  fullcond_dag.cpp  fullcond_dag.h  fullcond_dag_d.cpp  fullcond_dag_d.h  fullcond_dag_ia.cpp  fullcond_dag_ia.h  fullcond_dag_ia_mixed.cpp  fullcond_dag_ia_mixed.h  fullcond_rj.cpp  fullcond_rj.h  fullcond_rj_ia.cpp  fullcond_rj_ia.h  fullcond_rj_int.cpp  fullcond_rj_int.h  fullcond_rj_mix.cpp  fullcond_rj_mix.h  func_dag.cpp  func_dag.h  functions.cpp  functions.h  ia.cpp  ia.h  ia_mixed.cpp  ia_mixed.h  ia_ok.cpp  ia_ok.h
db/: uuid
examples/: credit.prg  credit.raw  mcmctutorial.prg  munich.bnd  remltutorial.prg  rent.prg  rent94.raw  rent94means.raw  steptutorial.prg
graph/: graphobj.cpp  graphobj.h
installc++/: BayesX.iwz
installjava/: hinweise_installation.txt
java/: BayesX.h  BayesX.java  BayesXdll.cpp  BayesXdll.h  CMakeLists.txt  Dense.java  FileFormatException.java  File_Writer.java  HelpFilter.java  Interpolate.java  MapFilter.java  MapPanel.java  Matrix3D.java  Model3D.java  OutputFilter.java  OutputFilter2.java  PSGr2.java  PSGrBase.java  PageableText.java  ParseData.java  ParseThread.java  Plot3D.java  PlotSurf.html  PrintableComponent.java  Sort.java  Sort_ind.java  Surfplot.java  ThreeD.java  dllmain.cpp  finalmap.java  makeBayesX.bat  run-java-gui.sh
leyre/: nbinomial.cpp  nbinomial.h  zip.cpp  zip.h
manual/: bayesxreport.cls  make_manuals.bat  manual.tex  manual_bayesregobjects.tex  manual_dagobjects.tex  manual_datasetobjects.tex  manual_gettingstarted.tex  manual_graphobjects.tex  manual_literature.tex  manual_mapobjects.tex  manual_mcmcregobjects.tex  manual_preliminaries.tex  manual_remlregobjects.tex  manual_specialcommands.tex  manual_star.tex  manual_stepwiseregobjects.tex  manual_tutorials.tex  manual_visualization.tex  manual_whatisbayesx.tex  mcmc.tex  mcmctutorial.tex  reml.tex  remltutorial.tex  step.tex  steptutorial.tex
manual4/: bayesxarticle.cls  manual.bib  manual.tex  manual_datasetobjects.tex  manual_gettingstarted.tex  manual_mapobjects.tex  manual_mcmcregobjects.tex  manual_preliminaries.tex  manual_remlregobjects.tex  manual_stepwiseregobjects.tex
mcmc/: baseline_reml.cpp  baseline_reml.h  distribution.cpp  distribution.h  distribution_glasgow.cpp  distribution_glasgow.h  fullcond.cpp  fullcond.h  fullcond_merror.cpp  fullcond_merror.h  fullcond_mult.cpp  fullcond_mult.h  fullcond_nonp_gaussian.cpp  fullcond_nonp_gaussian.h  fullcond_nonp_gaussian_stepwise.cpp  fullcond_nonp_gaussian_stepwise.h  fullcond_surf_gaussian.cpp  fullcond_surf_gaussian.h  gaussian_heteroskedastic.cpp  gaussian_heteroskedastic.h  hrandom.cpp  hrandom.h  kriging.cpp  kriging.h  kriging2.cpp  kriging2.h  mcmc.cpp  mcmc.h  mcmc_const.cpp  mcmc_const.h  mcmc_const_stepwise.cpp  mcmc_const_stepwise.h  mcmc_nonp.cpp  mcmc_nonp.h  mcmc_nonpbasis.cpp  mcmc_nonpbasis.h  mcmc_ridge.cpp  mcmc_ridge.h  mcmcsimul.cpp  mcmcsimul.h  (+32 more)
psplines/: IWLS_pspline.cpp  IWLS_pspline.h  bsplinemat.cpp  bsplinemat.h  fullcond_projection.cpp  fullcond_projection.h  fullcond_pspline_gaussian.cpp  fullcond_pspline_gaussian.h  fullcond_pspline_stepwise.cpp  fullcond_pspline_stepwise.h  fullcond_pspline_surf_gaussian.cpp  fullcond_pspline_surf_gaussian.h  fullcond_pspline_surf_stepwise.cpp  fullcond_pspline_surf_stepwise.h  mcmc_pspline.cpp  mcmc_pspline.h  mcmc_pspline_surf.cpp  mcmc_pspline_surf.h  spline_basis.cpp  spline_basis.h  spline_basis_surf.cpp  spline_basis_surf.h
samson/: multgaussian.cpp  multgaussian.h
sfunctions/: drawmap.r  drawmap.s  drawmap.u.r  drawmap.u.s  plot.r  plot.s  plotautocor.s  plotnonp.s  plotsample.s  plotsurf.r  plotsurf.s  readbndfile.r  readbndfile.s  shp2poly.r
sourcecode/: LICENSE
statwinwindows/: StatObjects.cpp  StatObjects.dfm  StatObjects.h  StatResults.cpp  StatResults.dfm  StatResults.h  StatReview.cpp  StatReview.dfm  StatReview.h  StatwinFrame.cpp  StatwinFrame.dfm  StatwinFrame.h  statwin_haupt.cpp  statwin_haupt.dfm  statwin_haupt.h
structadd/: FC.cpp  FC.h  FC_cv.cpp  FC_cv.h  FC_hrandom.cpp  FC_hrandom.h  FC_hrandom_variance.cpp  FC_hrandom_variance.h  FC_hrandom_variance_vec.cpp  FC_hrandom_variance_vec.h  FC_hrandom_variance_vec_nmig.cpp  FC_hrandom_variance_vec_nmig.h  FC_linear.cpp  FC_linear.h  FC_mult.h  (+65 more)
(+276 files in other folders)
